--- a/styles/notion.css
+++ b/styles/notion.css
@@ -190,9 +190,12 @@
 }
 
 .notion-code {
-  background: rgba(249, 250, 251, 1);
-  border: 1px solid rgba(229, 231, 235, 1);
-  border-radius: 0.375rem;
+    color: #eb5757;
+    padding: .2em .4em;
+    background: var(--bg-color-2);
+    border-radius: 3px;
+    font-size: 85%;
+    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
 }
 
 .notion-link {
